data/all_generated_tests/raw_wast_tests/unreachable_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1706.wast
;; Test 7: Construct a sequence where an unreachable instruction follows a call to an imported function within a block and ensure consistent context reset behavior.

(assert_invalid
  (module
    (import "env" "externalFunc" (func $externalFunc))
    (func (block (call $externalFunc) (unreachable) (i32.const 1)))
  )
  "type mismatch"
)